--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Curry2Cakes to GitHub Pages
+name: Deploy Curry2Cakes React App
 
 on:
   push:
@@ -25,12 +25,14 @@ jobs:
         with:
           node-version: '18'
           
-      - name: Install dependencies
-        run: npm install
+      - name: Install dependencies with legacy peer deps
+        run: npm install --legacy-peer-deps --force
         
       - name: Build application
         run: npm run build
-        
+        env:
+          CI: false
+          
       - name: Setup Pages
         uses: actions/configure-pages@v4
         
